<resources>
    <string name="app_name">文件分类大师</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="tab_one">项目</string>
    <string name="tab_two">团队</string>
    <string name="tab_three">我</string>

    <string name="username">用户名</string>
    <string name="pwd">密码</string>
    <string name="confirm">确认密码</string>
    <string name="reg_but">注册</string>
    <string name="reg_tip">请您认真填写牢记注册信息</string>
    <string name="log_tip">请输入您的用户名和密码</string>
    <string name="pro_name">项目名称</string>
    <string name="l_pro_add_title">项目名</string>
    <string name="l_pro_add_desc">项目描述</string>
    <string name="username_not_null">您的称呼不能为空</string>
</resources>
