<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="45dp"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="horizontal"
    >
    <LinearLayout
        android:id="@+id/tab_lin_one"
        android:layout_width="10dp"
        android:layout_weight="1"
        android:orientation="vertical"
        android:gravity="center"
        android:padding="2dp"
        android:layout_height="match_parent">
        <ImageView
            android:id="@+id/tab_img_one"
            android:layout_width="wrap_content"
            android:layout_height="30dp"
            android:src="@mipmap/tab_img_pro"
            />
        <TextView
            android:id="@+id/tab_text_one"
            android:layout_width="wrap_content"
            android:textSize="10sp"
            android:layout_height="wrap_content"
            android:text="@string/tab_one"/>
    </LinearLayout>
    <LinearLayout
        android:id="@+id/tab_lin_two"
        android:layout_width="10dp"
        android:layout_weight="1"
        android:orientation="vertical"
        android:gravity="center"
        android:layout_height="match_parent">
        <ImageView
            android:id="@+id/tab_img_two"
            android:layout_width="40dp"
            android:layout_height="30dp"
            android:src="@mipmap/tab_img_team"
            />
        <TextView
            android:id="@+id/tab_text_two"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="10sp"
            android:text="@string/tab_two"/>
    </LinearLayout>
    <LinearLayout
        android:id="@+id/tab_lin_three"
        android:layout_width="10dp"
        android:layout_weight="1"
        android:orientation="vertical"
        android:gravity="center"
        android:layout_height="match_parent">
        <ImageView
            android:id="@+id/tab_img_three"
            android:layout_width="40dp"
            android:layout_height="30dp"
            android:src="@mipmap/tab_img_pers"
            />
        <TextView
            android:id="@+id/tab_text_three"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="10sp"
            android:text="@string/tab_three"/>
    </LinearLayout>

</LinearLayout>