<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.shao.jobsnaps.view.LoginActivity">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/bg_grey">

          <include layout="@layout/toolbar"/>

        <EditText
            android:id="@+id/log_account"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:singleLine="true"
            android:background="@drawable/shape_form"
            android:maxEms="20"
            android:hint="@string/username"
            android:textSize="16sp"
            android:textColor="@color/black_"
            android:layout_marginLeft="30dp"
            android:layout_marginRight="30dp"
            android:layout_marginTop="30dp"
            android:layout_gravity="center_vertical"/>

        <EditText
            android:id="@+id/log_password"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:inputType="textPassword"
            android:hint="@string/pwd"
            android:textSize="16sp"
            android:textColor="@color/black_"
            android:singleLine="true"
            android:background="@drawable/shape_form"
            android:layout_marginLeft="30dp"
            android:layout_marginRight="30dp"
            android:layout_marginTop="15dp"
            android:layout_gravity="center_vertical"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="30dp"
            android:layout_marginRight="30dp"
            android:layout_marginTop="10dp"
            android:text="@string/log_tip"
            android:textSize="14sp"
            android:textColor="@color/gray_cc"/>

        <Button
            android:id="@+id/log_logbt"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_margin="30dp"
            android:text="登陆"
            android:textSize="15sp"
            android:textColor="@color/white"
            android:background="@color/blueviolet" />

        <Button
            android:id="@+id/log_singup"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginLeft="30dp"
            android:layout_marginRight="30dp"
            android:background="@color/grassgreen"
            android:text="注册"
            android:textColor="@color/white"
            android:textSize="15sp" />

    </LinearLayout>



</android.support.constraint.ConstraintLayout>
